# pxguard

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
baseline/: baseline.json
config/: config.yaml
core/: __init__.py  alerts.py  comparator.py  config_loader.py  hashing.py  monitor.py  scanner.py  thresholds.py
pxguard/: __init__.py  main.py
pxguard/baseline/: baseline.json
pxguard/config/: config.yaml
pxguard/core/: __init__.py  alerts.py  anomaly_engine.py  comparator.py  config_loader.py  dashboard.py  email_engine.py  email_service.py  event_capture.py  graph.py  graph_engine.py  models.py  monitor.py  notifier.py  parent_analyzer.py  process_resolver.py  process_tree_builder.py  reaction_engine.py  report.py  report_builder.py  report_engine.py  rich_dashboard.py  scanner.py  thresholds.py  watchdog_handler.py
pxguard/logs/: report_summary.txt  security_report_20260214_210346.txt  security_report_20260214_212030.txt  security_report_20260214_212532.txt  security_report_20260214_213034.txt  security_report_20260214_213154.txt  security_report_20260214_213330.txt
pxguard/simulator/: ransomware_simulator.py
pxguard/templates/: email_report.html
simulator/: __init__.py  ransomware_simulator.py
test_assets/: sample.txt
test_assets/folder_1/: file_1.txt  file_10.txt  file_2.txt  file_3.txt  file_4.txt  file_5.txt  file_6.txt  file_7.txt  file_8.txt  file_9.txt
test_assets/folder_10/: file_1.txt  file_10.txt  file_2.txt  file_3.txt  file_4.txt  file_5.txt  file_6.txt  file_7.txt  file_8.txt  file_9.txt
(+80 files in other folders)
